# sideRETRO

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS  CITATION.cff  ChangeLog  INSTALL  INSTALL.md  Makefile.am  NEWS  README.md  SECURITY.md  autogen.sh  configure.ac  meson.build  meson_options.txt
.github/workflows/: ci.yml  ci_meson.yml  docker.yml
assembly/: meson.build  sucateiro.c
docker/: Dockerfile  README.md
docs/: authors.rst  conf.py  index.rst  install.rst  intro.rst  meson.build  method.rst  result.rst  retrocopy.rst  usage.rst
docs/_templates/: footer.html
docs/data/: analyser.pl
src/: Makefile.am  abnormal.c  abnormal.h  align.c  align.h  array.c  array.h  bed.c  bed.h  bitree.c  bitree.h  blacklist.c  blacklist.h  bwa.c  bwa.h  chr.c  chr.h  cigar.c  cigar.h  cluster.c  cluster.h  correlation.c  correlation.h  db.c  db.h  db_merge.c  db_merge.h  dbscan.c  dbscan.h  debrujin.c  debrujin.h  dedup.c  dedup.h  exon.c  exon.h  fasta.c  fasta.h  floyd_warshall.c  floyd_warshall.h  genotype.c  (+57 more)
subprojects/: bwa.wrap  htslib.wrap  sqlite.wrap  zlib.wrap
tests/: Makefile.am  check_sider.h  check_sider_abnormal.c  check_sider_array.c  check_sider_bed.c  check_sider_bitree.c  check_sider_blacklist.c  check_sider_bwa.c  check_sider_chr.c  check_sider_cigar.c  check_sider_cluster.c  check_sider_correlation.c  check_sider_db.c  check_sider_db_merge.c  check_sider_dbscan.c  check_sider_debrujin.c  check_sider_dedup.c  check_sider_exon.c  check_sider_fasta.c  check_sider_floyd_warshall.c  check_sider_genotype.c  check_sider_gff.c  check_sider_graph.c  check_sider_graph_enumerate.c  check_sider_graph_unipath.c  check_sider_gz.c  check_sider_hash.c  check_sider_hungarian.c  check_sider_ibitree.c  check_sider_io.c  check_sider_kv.c  check_sider_list.c  check_sider_main.c  check_sider_process_sample.c  check_sider_retrocopy.c  check_sider_sam.c  check_sider_set.c  check_sider_sider.c  check_sider_str.c  check_sider_utils.c  (+4 more)
